--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.6",
     "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
